# django-adv-base

./: .env  .gitignore  Dockerfile  hello.py  makefile  pyproject.toml
backend/: .env  .pre-commit-config.yaml  Dockerfile  README.md  hello.py  manage.py  pyproject.toml  railway.toml  requirements.txt
backend/coreApp/: asgi.py  middlewares.py  settings.py  urls.py  utility.py  wsgi.py
backend/customUser/: models.py  serializers.py
backend/customUser/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0003_alter_customuser_table.py
backend/jwtTokens/: apps.py  serializers.py
backend/media/profile_images/: plorer.NEF.xmp
backend/notifications/: admin.py  models.py  serializers.py
backend/notifications/migrations/: 0001_initial.py  0002_alter_notifications_table.py
backend/post/: admin.py  models.py  serializers.py  urls.py  views.py
backend/post/migrations/: 0001_initial.py  0002_alter_posts_updated_at.py  0003_alter_posts_category_alter_posts_profile_and_more.py  0004_bookmarks_comments_alter_posts_likes_and_more.py  0005_alter_bookmarks_options_alter_posts_options.py
backend/post/scripts/: orm.py
backend/userProfile/: admin.py  apps.py  models.py  serializers.py  signals.py
backend/userProfile/migrations/: 0001_initial.py  0002_alter_userprofile_address_alter_userprofile_author_and_more.py  0003_alter_userprofile_user.py  0004_alter_userprofile_options_alter_userprofile_table.py
coreApp/: settings.py  urls.py
frontend/: bun.lockb  index.html  vite.config.js
subCore/: apps.py  urls.py  views.py
