[project]
name = "django-adv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.4",
    "django-extensions>=3.2.3",
    "djangorestframework>=3.15.2",
    "django-debug-toolbar>=4.4.6",
    "django-cors-headers>=4.6.0",
    "django-dotenv>=1.4.2",
    "python-dotenv>=1.0.1",
    "django-filter>=24.3",
    "dj-database-url>=2.3.0",
    "djangorestframework-simplejwt>=5.4.0",
    "gunicorn>=23.0.0",
    "ruff>=0.9.1",
    "whitenoise>=6.8.2",
    "psycopg2-binary>=2.9.10",
    "django-widget-tweaks>=1.5.0",
    "stripe>=11.4.1",
    "django-allauth-ui>=1.5.3",
    "django-allauth[socialaccount]>=65.3.1",
    "django-anymail>=12.0",
    "django-ckeditor>=6.7.2",
    "drf-yasg>=1.21.8",
    "humanize>=4.11.0",
    "shortuuid>=1.0.13",
    "django-crispy-forms>=2.3",
    "django-formset-js-improved>=0.5.0.3",
    "django-import-export>=4.3.3",
    "django-jazzmin>=3.0.1",
    "django-jet>=1.0.8",
    "django-jquery-js>=3.1.1",
    "django-js-asset>=3.0.1",
    "django-mailgun-provider>=0.2.3",
    "django-mathfilters>=1.0.0",
    "django-on-heroku>=1.1.2",
    "django-countries>=7.6.1",
    "django-compat>=1.0.15",
    "aiohttp>=3.11.11",
    "aiohttp-retry>=2.9.1",
    "aiosignal>=1.3.2",
    "cffi>=1.17.1",
    "channels>=4.2.0",
    "channels-redis>=4.2.1",
    "constantly>=23.10.4",
    "colorama>=0.4.6",
    "django-ckeditor-5>=0.2.15",
]
